Added and tested addPaymentHandler